--- a/UserAlbumsChallenge/AlbumDetails/View/AlbumDetailsViewController.xib
+++ b/UserAlbumsChallenge/AlbumDetails/View/AlbumDetailsViewController.xib
@@ -29,7 +29,7 @@
                 </searchBar>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l0V-ue-kTc">
                     <rect key="frame" x="16" y="67" width="361" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
